force-app/main/default/objects/Case_Item__c/Case_Item__c.object-meta.xml
<CustomObject>
    <description>a specific sub item under the case object</description>
    <label>HFS Purchase</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>HFS Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HFS Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>