force-app/main/default/objects/Case_Item__c/fields/Bag_Barcodes_Manual__c.field-meta.xml
<CustomField>
    <fullName>Bag_Barcodes_Manual__c</fullName>
    <description>Auxiliar field to get the barcodes from the bags. Just used when the HFS Co-ordinator need to register HFS Purchases.</description>
    <label>Bag Barcodes Manual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>