force-app/main/default/objects/Case_Item__c/fields/Bags_at_wrong_Collection_Point__c.field-meta.xml
<CustomField>
    <fullName>Bags_at_wrong_Collection_Point__c</fullName>
    <label>Bags at wrong Collection Point</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.At_InCorrect_Storage_Location__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>