force-app/main/default/objects/Case_Item__c/fields/Bags_in_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Bags_in_Storage_Location__c</fullName>
    <label>Bags in Storage Location</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.In_Storage_Point__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>