force-app/main/default/objects/Case_Item__c/fields/Estimated_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Spend__c</fullName>
    <description>The estimated spend for the collection item</description>
    <inlineHelpText>The estimated spend for the collection item</inlineHelpText>
    <label>Estimated Spend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>