force-app/main/default/objects/Case_Item__c/fields/HFS_Bag_Drop__c.field-meta.xml
<CustomField>
    <fullName>HFS_Bag_Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HFS Bag Drop</label>
    <type>Checkbox</type>
</CustomField>