force-app/main/default/objects/Case_Item__c/fields/HFS_Bag_Transfer__c.field-meta.xml
<CustomField>
    <fullName>HFS_Bag_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HFS Bag Transfer</label>
    <type>Checkbox</type>
</CustomField>