force-app/main/default/objects/Case_Item__c/fields/HFS_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>HFS_Brand_Name__c</fullName>
    <description>Report Purposes. Show the Brand at the Purchase level object</description>
    <formula>Village_Presence__r.Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>