force-app/main/default/objects/Case_Item__c/fields/HFS_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>HFS_Item_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HFS Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>