force-app/main/default/objects/Case_Item__c/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <description>The number of items in the record</description>
    <inlineHelpText>The number of items in the record</inlineHelpText>
    <label>Item Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>