force-app/main/default/objects/Case_Item__c/fields/Oversized_Bags__c.field-meta.xml
<CustomField>
    <fullName>Oversized_Bags__c</fullName>
    <label>Oversized Bags</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.Oversized__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>