force-app/main/default/objects/Case_Item__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <description>This field will be filled with the information of the pickup location for the correspondent jobs.</description>
    <label>Pickup Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>