force-app/main/default/objects/Case_Item__c/fields/Remaining_Bags_to_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Bags_to_Pickup__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Status__c,&apos;Guest Collected&apos;)),Total_Bags__c - Scanned_Bags__c - Bags_in_Storage_Location__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Bags to Pickup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>