force-app/main/default/objects/Case_Item__c/fields/Require_a_Runner__c.field-meta.xml
<CustomField>
    <fullName>Require_a_Runner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require a Runner</label>
    <type>Checkbox</type>
</CustomField>