force-app/main/default/objects/Case_Item__c/fields/Scanned_Bags__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Bags__c</fullName>
    <description>Roll up summary that get all Bags for this Purchases that already had been scanned.</description>
    <label>Scanned Bags</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.Scanned__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>