force-app/main/default/objects/Case_Item__c/fields/Scanned_for_Quick_Handover_Count__c.field-meta.xml
<CustomField>
    <fullName>Scanned_for_Quick_Handover_Count__c</fullName>
    <label>Scanned for Quick Handover Count</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.Scanned_for_Quick_Handover__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>