force-app/main/default/objects/Case_Item__c/fields/Service_Guest_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Guest_Number__c</fullName>
    <formula>Case__r.Service_Guest_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Guest Number</label>
    <type>Text</type>
</CustomField>