force-app/main/default/objects/Case_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>the status of the item....</description>
    <inlineHelpText>the status of the item</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Pick-up from Brand</fullName>
            </value>
            <value>
                <fullName>In transit</fullName>
            </value>
            <value>
                <fullName>Ready for Guest Collection</fullName>
            </value>
            <value>
                <fullName>Guest Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>