force-app/main/default/objects/Case_Item__c/fields/Total_Bags__c.field-meta.xml
<CustomField>
    <fullName>Total_Bags__c</fullName>
    <description>Roll-up Summaty with all Bags that are assigned</description>
    <label>Total Bags</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.HFS_Bag_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>