force-app/main/default/objects/Case_Item__c/fields/Total_Collected_Bags_from_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected_Bags_from_Guest__c</fullName>
    <label>Total Collected Bags from Guest</label>
    <summaryFilterItems>
        <field>HFS_Bag__c.Status__c</field>
        <operation>equals</operation>
        <value>Collected</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Bag__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>