force-app/main/default/objects/Case_Item__c/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <label>Total Jobs</label>
    <summaryForeignKey>HFS_Job__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>