force-app/main/default/objects/Case_Item__c/fields/Total_of_On_Going_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_of_On_Going_Jobs__c</fullName>
    <label>Total of On Going Jobs</label>
    <summaryFilterItems>
        <field>HFS_Job__c.Job_Status__c</field>
        <operation>equals</operation>
        <value>Delivering, Bags Putaway, Started</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Job__c.HFS_Purchase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>