force-app/main/default/objects/Case_Item__c/fields/Village_Name__c.field-meta.xml
<CustomField>
    <fullName>Village_Name__c</fullName>
    <description>Auxiliar field that returns the Village ID from the correspondent Case.</description>
    <formula>Case__r.Village__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village Name</label>
    <type>Text</type>
</CustomField>