force-app/main/default/objects/Case_Item__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the brand from which the case item relates to</description>
    <inlineHelpText>The shop that this item relates to</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipName>Case_Items</relationshipName>
    <type>Lookup</type>
</CustomField>