force-app/main/default/objects/Case_Item__c/validationRules/Bag_Count_CANNOT_be_Greater_than_Spend.validationRule-meta.xml
<ValidationRule>
    <fullName>Bag_Count_CANNOT_be_Greater_than_Spend</fullName>
    <active>false</active>
    <errorConditionFormula>Estimated_Spend__c &lt; Item_Count__c</errorConditionFormula>
    <errorMessage>Bag Count cannot be greater than Estimated Spend</errorMessage>
</ValidationRule>